--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -162,7 +162,7 @@
             </div>
             <div class="col-sm-4">
                 <h3>Abhinayaa</h3>
-                <p>Welcome to our grill. I am happy to be a part of this most loved restaurant's team.I am the manager here and I would be your SPOC. Would definitely make sure you have a fantastic dining n ordering experience.  </p>
+                <p>Welcome to our grill. I am happy to be a part of this most loved restaurant's team. I am the manager here and I would be your SPOC. Would definitely make sure you have a fantastic dining & ordering experience.  </p>
             </div>
             <div class="col-sm-4">
                 <h3>Patrick Haberern</h3>
